Add serializer in MintStorage